dataset1235/2025-2/2947369575/users/2603834977/executions/1003782500_4233865845.log
== RUN (2025-09-01 22:56:17)
-- CODE: 
tempc = float(imput("insira a temperatura em calsius"))
tempf = tempc*(9/5)+32
print(round(tempf,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:55:26)
-- CODE: 
tempc = float(imput("insira a temperatura em calsius"))
tempf = tempc*(9/5)+32
print(round(tempf,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:55:20)
-- CODE: 
tempc = float(imput("insira a temperatura em calsius"))
tempf = tempc*(9/5)+32
print(round(tempf,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:56:19)
-- CODE: 
tempc = float(imput("insira a temperatura em calsius"))
tempf = tempc*(9/5)+32
print(round(tempf,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:56:14)
-- CODE: 
tempc = float(imput("insira a temperatura em calsius"))
tempf = tempc*(9/5)+32
print(round(tempf,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:56:18)
-- CODE: 
tempc = float(imput("insira a temperatura em calsius"))
tempf = tempc*(9/5)+32
print(round(tempf,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:53:08)
-- CODE: 
temp = float(imput("insira a temperatura em calsius"))

print(round((temp*(9/5)+32),2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:53:08)
-- CODE: 
temp = float(imput("insira a temperatura em calsius"))

print(round((temp*(9/5)+32),2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:56:18)
-- CODE: 
tempc = float(imput("insira a temperatura em calsius"))
tempf = tempc*(9/5)+32
print(round(tempf,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:56:18)
-- CODE: 
tempc = float(imput("insira a temperatura em calsius"))
tempf = tempc*(9/5)+32
print(round(tempf,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:56:13)
-- CODE: 
tempc = float(imput("insira a temperatura em calsius"))
tempf = tempc*(9/5)+32
print(round(tempf,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:53:06)
-- CODE: 
temp = float(imput("insira a temperatura em calsius"))

print(round((temp*(9/5)+32),2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:55:26)
-- CODE: 
tempc = float(imput("insira a temperatura em calsius"))
tempf = tempc*(9/5)+32
print(round(tempf,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:55:25)
-- CODE: 
tempc = float(imput("insira a temperatura em calsius"))
tempf = tempc*(9/5)+32
print(round(tempf,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:56:13)
-- CODE: 
tempc = float(imput("insira a temperatura em calsius"))
tempf = tempc*(9/5)+32
print(round(tempf,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:57:10)
-- CODE: 
tempc = float(input("insira a temperatura em calsius"))
tempf = tempc*(9/5)+32
print(round(tempf,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
insira a temperatura em calsius-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
insira a temperatura em calsius14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
insira a temperatura em calsius212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
insira a temperatura em calsius68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
insira a temperatura em calsius32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
insira a temperatura em calsius86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:55:21)
-- CODE: 
tempc = float(imput("insira a temperatura em calsius"))
tempf = tempc*(9/5)+32
print(round(tempf,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:53:08)
-- CODE: 
temp = float(imput("insira a temperatura em calsius"))

print(round((temp*(9/5)+32),2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    temp = float(imput("insira a temperatura em calsius"))
                 ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:56:15)
-- CODE: 
tempc = float(imput("insira a temperatura em calsius"))
tempf = tempc*(9/5)+32
print(round(tempf,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:56:15)
-- CODE: 
tempc = float(imput("insira a temperatura em calsius"))
tempf = tempc*(9/5)+32
print(round(tempf,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:56:16)
-- CODE: 
tempc = float(imput("insira a temperatura em calsius"))
tempf = tempc*(9/5)+32
print(round(tempf,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = float(imput("insira a temperatura em calsius"))
                  ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:57:11)
-- CODE: 
tempc = float(input("insira a temperatura em calsius"))
tempf = tempc*(9/5)+32
print(round(tempf,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
insira a temperatura em calsius-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
insira a temperatura em calsius14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
insira a temperatura em calsius212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
insira a temperatura em calsius68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
insira a temperatura em calsius32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
insira a temperatura em calsius86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
